made views/*.xml route public for debugging, set sample xpaths for the template

--- a/webapps/ROOT/assets/templates/sample.xml
+++ b/webapps/ROOT/assets/templates/sample.xml
@@ -14,12 +14,12 @@
   <kiln:child>
     <kiln:block name="title">
       <kiln:super />
-      <xsl:value-of select="/aggregation/tei:TEI/tei:teiHeader/tei:fileDesc/tei:titleStmt/tei:title[1]" />
+      <xsl:value-of select="/aggregation/sample_p5//body/h2[1]" />
     </kiln:block>
 
     <kiln:block name="page-heading">
       <kiln:super />
-      <xsl:value-of select="/aggregation/tei:TEI/tei:teiHeader/tei:fileDesc/tei:titleStmt/tei:title[1]" />
+      <xsl:value-of select="/aggregation/sample_p5//body/h2[1]" />
     </kiln:block>
 
     <kiln:block name="content">
