--- a/webapps/ROOT/assets/templates/sample.xml
+++ b/webapps/ROOT/assets/templates/sample.xml
@@ -26,7 +26,7 @@
       <div class="row">
         
         <div class="large-12 columns">
-          <xsl:apply-templates select="/aggregation/tei:TEI/tei:text" />
+          <xsl:copy-of select="/aggregation/sample_p5//body/div"/>
         </div>
       </div>
     </kiln:block>
