Added menu-languages template to base.xml

--- a/webapps/ROOT/assets/templates/base.xml
+++ b/webapps/ROOT/assets/templates/base.xml
@@ -60,6 +60,7 @@
                                required="required" type="search" />
                       </form>
                     </li>
+                    <xsl:call-template name="menu-languages" />
                   </ul>
                 </section>
               </kiln:block>
