Changed the texts index to use Solr results rather than getting metadata from the TEI files directly.

--- a/webapps/ROOT/assets/templates/base.xml
+++ b/webapps/ROOT/assets/templates/base.xml
@@ -9,6 +9,8 @@
   <!-- Imports the menu stylesheet -->
   <xsl:import href="cocoon://_internal/template/xsl/stylesheets/menu/menu.xsl" />
 
+  <xsl:import href="cocoon://_internal/url/reverse.xsl" />
+
   <kiln:block name="html">
     <html class="no-js">
       <kiln:block name="head">
