Added initial work on indexing and displaying indices.

--- a/webapps/ROOT/assets/styles/base.css
+++ b/webapps/ROOT/assets/styles/base.css
@@ -1,3 +1,13 @@
+ul.index-instances { }
+
+.index-instance-file {
+    font-weight: bolder;
+}
+
+.index-instance-text-parts { }
+
+.index-instance-line { }
+
 footer {
     background: none repeat scroll 0 0 #fafafa;
     border-top: 1px solid #eeeeee;
