--- a/webapps/ROOT/assets/templates/inscription-index.xml
+++ b/webapps/ROOT/assets/templates/inscription-index.xml
@@ -37,6 +37,7 @@
     <kiln:block name="content">
       <div class="row">
         <div class="large-12 columns">
+          <p>There are some <a href="{kiln:url-for-match('local-indices-type-display', ('epidoc'), 0)}">indices of various facets of inscription data</a> available.</p>
           <xsl:apply-templates mode="text-index"
                                select="/aggregation/response" />
         </div>
