--- a/webapps/ROOT/assets/templates/epidoc-spes.xml
+++ b/webapps/ROOT/assets/templates/epidoc-spes.xml
@@ -26,7 +26,7 @@
               <xsl:with-param name="parm-external-app-style" select="$external-app-style" tunnel="yes"/>
               <xsl:with-param name="parm-internal-app-style" select="$internal-app-style" tunnel="yes"/>
               <xsl:with-param name="parm-leiden-style" select="$leiden-style" tunnel="yes"/>
-              <xsl:with-param name="parm-line-inc" select="($line-inc)" tunnel="yes" as="xs:double"/>
+              <xsl:with-param name="parm-line-inc" select="number($line-inc)" tunnel="yes" as="xs:double"/>
               <xsl:with-param name="parm-verse-lines" select="$verse-lines" tunnel="yes"/>
             </xsl:call-template>
           </xsl:for-each>
