--- a/webapps/ROOT/assets/templates/home.xml
+++ b/webapps/ROOT/assets/templates/home.xml
@@ -18,7 +18,7 @@
         <div class="large-12 columns text-center">
           <h1>
             <span class="round label">
-              <i18n:text i18n:key="home-title">Welcome to Kiln!</i18n:text>
+              <i18n:text i18n:key="home-title">Welcome to EFES!</i18n:text>
             </span>
           </h1>
         </div>
@@ -29,7 +29,7 @@
       <main>
         <div class="row">
           <div class="small-6 large-centered columns">
-            <p>Now that you have Kiln up and running, it's time to
+            <p>Now that you have EFES up and running, it's time to
             start building your project. Start with one of the options
             listed below and go from there.</p>
           </div>
@@ -61,11 +61,11 @@
             <div class="panel radius">
               <p><strong>Read the documentation</strong></p>
 
-              <p>Kiln comes with documentation both <a
+              <p>The system comes with documentation both <a
               href="http://kiln.readthedocs.org/en/latest/">online</a>
               and, in source form, in the docs directory of your
               installation. It explains how you can modify everything
-              about your Kiln project.</p>
+              about your project.</p>
             </div>
           </div>
         </div>
