Added facsimile graphic handling to EpiDoc XSLT and linked it in with EFES.

--- a/webapps/ROOT/assets/templates/epidoc.xml
+++ b/webapps/ROOT/assets/templates/epidoc.xml
@@ -8,6 +8,7 @@
   <xsl:param name="edition-type" />
   <xsl:param name="edn-structure" />
   <xsl:param name="external-app-style" />
+  <xsl:param name="image-loc" />
   <xsl:param name="internal-app-style" />
   <xsl:param name="leiden-style" />
   <xsl:param name="line-inc" />
