Added link to ZIP archive of EpiDoc texts to inscriptions index.

--- a/webapps/ROOT/assets/templates/inscription-index.xml
+++ b/webapps/ROOT/assets/templates/inscription-index.xml
@@ -38,6 +38,9 @@
       <div class="row">
         <div class="large-12 columns">
           <p>There are some <a href="{kiln:url-for-match('local-indices-type-display', ($language, 'epidoc'), 0)}">indices of various facets of inscription data</a> available.</p>
+
+          <p>The source EpiDoc XML for all of the listed inscriptions are available in a <a href="{kiln:url-for-match('local-epidoc-zip', ($language), 0)}">ZIP archive</a>.</p>
+
           <xsl:apply-templates mode="text-index"
                                select="/aggregation/response" />
         </div>
