added Greek keyboard in the Search page

--- a/webapps/ROOT/assets/styles/base.css
+++ b/webapps/ROOT/assets/styles/base.css
@@ -15,3 +15,31 @@ footer {
     font-size: 80%;
     padding: 1em;
 }
+
+/*Keyboard*/
+#keyboard_box {
+    display:none;
+    margin-top: 1em;
+    margin-right: 1em;
+    margin-bottom: 4em;
+    float: none;
+    width: 300px;
+    height: 300px;
+}
+#keyboard li {
+    font-size: 18px;
+    list-style: none;
+    float: left;
+    margin: 0 5px 5px 0;
+    width: 25px;
+    height: 25px;
+    line-height: 25px;
+    text-align: center;
+    background: #F0F0F0;
+    border-radius: 5px;
+}
+#keyboard li:hover {
+    border: none;
+    background-color: #e5e5e5;
+    cursor: pointer;
+}
