added sample favicon

--- a/webapps/ROOT/assets/templates/base.xml
+++ b/webapps/ROOT/assets/templates/base.xml
@@ -30,6 +30,7 @@
                   type="text/css" />
             <link href="{$kiln:assets-path}/styles/site.css" rel="stylesheet"
                   type="text/css" />
+            <link href="{$kiln:assets-path}/images/favicon.png" rel="shortcut icon" type="image/png"/>
           </kiln:block>
           <kiln:block name="js">
             <script src="{$kiln:assets-path}/foundation/js/vendor/custom.modernizr.js">&#160;</script>
