added sample font for Ancient Greek

--- a/webapps/ROOT/assets/styles/base.css
+++ b/webapps/ROOT/assets/styles/base.css
@@ -43,3 +43,32 @@ footer {
     background-color: #e5e5e5;
     cursor: pointer;
 }
+
+/*Fonts*/
+@font-face {
+    font-family: "New Athena Unicode";
+    src: url('fonts/nau.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: "New Athena Unicode";
+    src: url('fonts/nauBold.woff') format('woff');
+    font-weight: bold;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: "New Athena Unicode";
+    src: url('fonts/nauItalic.woff') format('woff');
+    font-weight: normal;
+    font-style: italic;
+}
+
+@font-face {
+    font-family: "New Athena Unicode";
+    src: url('fonts/nauBoldItalic.woff') format('woff');
+    font-weight: bold;
+    font-style: italic;
+}
