--- a/webapps/ROOT/kiln/stylesheets/epidoc/global.css
+++ b/webapps/ROOT/kiln/stylesheets/epidoc/global.css
@@ -67,7 +67,12 @@
 .italic {
     font-style: italic;
     }
-    
+
+.rtl, .rtl * {
+    direction: rtl;
+    text-align-last: right;
+}
+
 h4.slimmer {
     margin-bottom: -0.5em;
     }    
