--- a/webapps/ROOT/assets/templates/epidoc.xml
+++ b/webapps/ROOT/assets/templates/epidoc.xml
@@ -29,23 +29,27 @@
 
     <kiln:block name="css">
       <kiln:super />
-      <link href="{$kiln:assets-path}/styles/epidoc/global.css"
-            rel="stylesheet" type="text/css" />
     </kiln:block>
 
     <kiln:block name="page-heading">
-      <xsl:copy-of select="$title" />
+      <xsl:value-of select="$title" />
+
+      <div class="export-seal">
+        Export in
+        <a href="{kiln:url-for-match('local-epidoc-display-xml', ($language, $filename), 0)}"> XML</a>
+        |
+        <a href="javascript:window.print()">PDF</a>
+      </div>
     </kiln:block>
 
-    <kiln:block name="content">
+    <!--<kiln:block name="content">
       <div class="row">
         <div class="large-12 columns">
           <p>
-            <br/>
-            <a href="{kiln:url-for-match('local-epidoc-display-xml', ($language, $filename), 0)}">Full EpiDoc XML</a>
+            <a href="{kiln:url-for-match('local-epidoc-display-xml', ($language, $filename), 0)}">Full SigiDoc XML</a>
           </p>
         </div>
       </div>
-    </kiln:block>
+    </kiln:block>-->
   </kiln:child>
 </kiln:root>
