SigiDoc changes in base.css

--- a/webapps/ROOT/assets/styles/base.css
+++ b/webapps/ROOT/assets/styles/base.css
@@ -1,4 +1,6 @@
-ul.index-instances { }
+/*  original EFES css
+
+ ul.index-instances { }
 
 .index-instance-file {
     font-weight: bolder;
@@ -15,10 +17,12 @@ footer {
     font-size: 80%;
     padding: 1em;
 }
+*/
 
-/*Keyboard*/
+/*Keyboard*/ 
+
 #keyboard_box {
-    display:none;
+    display: none;
     margin-top: 1em;
     margin-right: 1em;
     margin-bottom: 4em;
@@ -31,44 +35,151 @@ footer {
     list-style: none;
     float: left;
     margin: 0 5px 5px 0;
-    width: 25px;
-    height: 25px;
+    width: 22px;
+    height: 22px;
     line-height: 25px;
     text-align: center;
-    background: #F0F0F0;
+    background: #f0f0f0;
     border-radius: 5px;
 }
+
+/* for AR keyboard, see also search.xml */
+
+@font-face {
+    font-family: athenaruby;
+    src: url('../fonts/AthenaRuby_b021.ttf') format('truetype')
+}  /* for Athena Ruby in keyboard! */
+
+#keyboard_box-ar {
+    display: none;
+    margin-top: 1em;
+    margin-right: 1em;
+    margin-bottom: 4em;
+    float: none;
+    width: 300px;
+    height: 300px;
+}
+#keyboard-ar li {
+    font-family: athenaruby;
+    font-size: 18px;
+    list-style: none;
+    float: left;
+    margin: 0 5px 5px 0;
+    width: 22px;
+    height: 22px;
+    line-height: 25px;
+    text-align: center;
+    background: #f0f0f0;
+    border-radius: 5px;
+}
+
+#keyboard-ar li:hover {
+    border: none;
+    background-color: #e5e5e5;
+    cursor: pointer;
+}
+
 #keyboard li:hover {
     border: none;
     background-color: #e5e5e5;
     cursor: pointer;
 }
 
-/*Fonts*/
-@font-face {
-    font-family: "New Athena Unicode";
-    src: url('fonts/nau.woff') format('woff');
+ul.index-instances {
     font-weight: normal;
-    font-style: normal;
 }
 
-@font-face {
-    font-family: "New Athena Unicode";
-    src: url('fonts/nauBold.woff') format('woff');
-    font-weight: bold;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: "New Athena Unicode";
-    src: url('fonts/nauItalic.woff') format('woff');
+.index-instance-file {
     font-weight: normal;
-    font-style: italic;
 }
 
-@font-face {
-    font-family: "New Athena Unicode";
-    src: url('fonts/nauBoldItalic.woff') format('woff');
-    font-weight: bold;
-    font-style: italic;
+.index-instance-text-parts {
+    font-weight: normal;
+}
+
+.index-instance-line {
+    font-weight: normal;
+}
+
+#site-title {
+    overflow: hidden;
+    background: url("../images/seal.jpg") no-repeat;
+    position: inherit;
+    background-size: 1440px 300px;
+    font-size: 45px;
+    color: #562c2c;
+    height: 120px;
+    text-align: right;
+    margin-top: -1px;
+    margin-bottom: -1px;
+    padding-right: 10px;
+    padding-left: 10px;
+    width: 100%;
+}
+
+nav.top-bar,
+nav.top-bar ul.right li,
+nav.top-bar ul.left * {
+    background-color: #562c2c;
+    font-size: 18px;
+    font-weight:normal;
+}
+
+nav.top-bar {
+    margin: 0 0px 40px 0px;
+}
+
+.top-bar-section {
+    letter-spacing: 1px;
+}
+
+p {
+    text-align: justify;
+}
+
+li {
+    text-align: left;
+}
+
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+li,
+ul {
+    font-family: "calibri";
+}
+
+h1 {
+    font-size: 45px;
+    color: #562c2c;
+    padding-bottom: 10px;
+    margin-top: auto;
+}
+
+a:link,
+a:visited,
+a:active {
+    color: #637893;
+}
+a:hover {
+    color: #45658b;
+}
+
+body {
+    background: -7px top repeat-y;
+    font-size: 18px;
+    margin: 0;
+    padding: 0;
+    color: #333;
+    background-color: white;
+    display: block;
+    padding: 3px 1px 3px 3px;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    
 }
